# diataxis-docs

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
diataxis-documentation-framework/: conf.py
docs/: README.md
docs/explanation/: diataxis-philosophy.md
docs/how-to/: add-new-documentation.md
docs/reference/: api.md
docs/tutorials/: getting-started.md
specs/: design.md  make-tutorial.md  review-tutorial.md
